--- a/app/src/main/res/layout/activity_actividad_c.xml
+++ b/app/src/main/res/layout/activity_actividad_c.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="#E91E63"
+    tools:context=".ActividadC">
 
     <Button
-        android:id="@+id/boton"
+        android:id="@+id/botonRe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="IR A ACTIVIDAD B"
+        android:text="REFRESAR A B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
